movement update to stop app from going off screen

--- a/Doors98Home/doors98Home.css
+++ b/Doors98Home/doors98Home.css
@@ -2,7 +2,7 @@ body{
     margin: 0px;
     padding: 0px;
     font-family: 'Microsoft Sans Serif', sans-serif;
-    
+    overflow: hidden;
 }
 
 
@@ -296,6 +296,9 @@ float: left;
 #doorsappsholder{
     height: 91.2%;
     width: 100%;
+    display: flex;
+  justify-content: center;
+  align-items: center;
     
     
 }
@@ -306,8 +309,9 @@ float: left;
     max-height: 100%;
     height: 92.5%;
     width: 100%;
-    top: 0;
-    left: 0;
+    
+    
+    
 }
 .minimizedApp{
     display: none;
